# Clevit

./: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  Clevit  Clevit.pro  INSTALLING.md  INSTALLING_DEPENDENCIES_GUIDE.md  ISSUE_TEMPLATE.md  README.md  TPad.pro  about.ui  index.html  index_de.html  index_pt.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ArchLinux/: .SRCINFO  PKGBUILD  TP_BETA_MASTER.sh  TP_BETA_MASTER_CMAKE.sh  TP_BETA_MASTER_QMAKE.sh  tpad.install
Linux/: .SRCINFO  CV_BETA_MASTER_CMAKE.sh  CV_BETA_MASTER_QMAKE.sh  CV_BETA_MASTER_QMAKE_Debian.sh  Installin_dependencies_Arch.sh  Installin_dependencies_Debian.sh  PKGBUILD
css/: glow.css  goldenhour.css
share/applications/: Clevit.desktop  TPad.desktop
src/: TPad.pro  about.cpp  about.h  about.ui  credits.cpp  credits.h  credits.ui  encryption.cpp  encryption.h  encryption.ui  highlighter.cpp  highlighter.h  icons.qrc  icons.qrc.depends  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  save_load_files.cpp  tpad.desktop  translation.cpp
src/languages/: TranslationClevit_de.qm  TranslationClevit_de.ts  TranslationClevit_en.qm  TranslationClevit_en.ts  TranslationClevit_pt.qm  TranslationClevit_pt.ts  TranslationExample_de.ts  TranslationExample_en.ts  TranslationTPad_de.qm  TranslationTPad_de.ts  TranslationTPad_en.qm  TranslationTPad_en.ts  TranslationTPad_pt.qm  TranslationTPad_pt.ts
